[package]
name = "krcf"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "krcf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = ["extension-module", "generate-import-lib"] }
rcf = { path = "./rcflib" }
bincode = ">=2"

[profile.release]
codegen-units = 1
lto = true
strip = true
split-debuginfo = "packed"
