[project]
name = "krcf"
authors = [{ name = "Dowon", email = "ks2515@naver.com" }]
description = "AWS Random Cut Forest for Python"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[dependency-groups]
dev = ["ruff"]
test = ["pytest", "pytest-pretty"]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
profile = "release"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "FAST",
    "FBT",
    "FURB",
    "I001",
    "ISC",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TC",
    "TRY",
    "UP",
    "W",
]
ignore = ["B905", "E501"]

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["S101"]
