[package]
name = "krcflib"
version = "4.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Modified https://github.com/aws/random-cut-forest-by-aws"

[lib]
name = "rcflib"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/example.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num = "*"
rayon = "*"
rand = "*"
rand_chacha = "*"
rand_core = "*"
serde = { workspace = true }

[dev-dependencies]
parameterized_test = "*"
