[package]
name = "krcflib"
version = "4.0.1"
edition = "2021"
description = "Modified https://github.com/aws/random-cut-forest-by-aws"
repository = { workspace = true }
license = "Apache-2.0"

[lib]
name = "rcflib"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/example.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = ">=0.4, <1"
rand = "^0.9"
rand_chacha = "^0.9"
rand_core = "^0.9"
rayon = "1"
serde = { workspace = true }

[dev-dependencies]
parameterized_test = "<1"
